[tool.poetry]
name = "async-gym-agents"
version = "0.1.0"
description = ""
authors = ["Jonas Peche <j_peche@wargaming.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
torchinfo = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
